<resources>
    <string name="settings_distance_in_meters">Distance in meters</string>
    <string name="settings_accuracy_in_meters">Accuracy in meters</string>
    <string name="settings_enter_meters">Enter meters(max 9999)</string>
    <string name="pref_logging_title">Logging details</string>
    <string name="log_gpx_title">Log to GPX</string>
    <string name="log_gpx_summary">Logs locations to a GPX v1.0 file</string>
    <string name="log_kml_title">Log to KML</string>
    <string name="log_kml_summary">Logs locations to a KML v2.2 file</string>
    <string name="log_plain_text_title">Log to CSV</string>
    <string name="log_plain_text_summary">Logs locations to a CSV file</string>
    <string name="new_file_creation_title">New file creation</string>
    <string name="new_file_creation_summary">Whether to create a new file once a day or each time you start.</string>
    <string name="new_file_custom_title">Custom file name</string>
    <string name="new_file_custom_summary">You can use your own file name.
        Optionally add a few dynamic parameters such as serial number, year, hour, minute, etc. Very dynamic file names
        may not work well with auto send features because it only sends the latest file.</string>
    <string name="pref_performance_title">Performance</string>
    <string name="time_before_logging_title">Logging interval</string>
    <string name="time_before_logging_summary">Use 0 for maximum frequency, but slower is better for battery life. System
        level battery configuration may override this setting, see Help and FAQ.
    </string>
    <string name="time_before_logging_dialog_title">Time in seconds</string>
    <string name="time_before_logging_hint">Enter seconds (max 9999)</string>
    <string name="keep_fix_summary">Be careful, this will dramatically decrease the battery life. Use only for
        higher precision with low frequencies.
    </string>
    <string name="keep_fix_title">Keep GPS on between fixes</string>
    <string name="retry_time_title">Duration to match accuracy</string>
    <string name="retry_time_summary">After acquiring an initial fix, keep trying for this long to get an accurate point to match the accuracy filter setting.</string>
    <string name="autoemail_title">Email</string>
    <string name="autoemail_target">Target email addresses</string>
    <string name="autoemail_frequency_whenistop">When I press stop</string>
    <string name="autoemail_smtp_category">Email Settings</string>
    <string name="autoemail_username_summary">Username with your email provider</string>
    <string name="autoemail_password_summary">Password with your email provider</string>
    <string name="autoemail_ssl">Implicit SSL</string>
    <string name="autoemail_ssl_summary">Try toggling this if you cannot connect</string>
    <string name="autoemail_choosepreset">Mail Provider</string>
    <string name="autoemail_choosepreset_summary">Pick a provider or choose manual</string>
    <string name="autoemail_smtp_testemail">Test email</string>
    <string name="autoemail_test">Send a test email using the above settings</string>
    <string name="osm_setup_title">OpenStreetMap</string>
    <string name="osm_resetauth">Clear authorization</string>
    <string name="osm_resetauth_summary">Remove the local authorization used to talk to your OSM account.</string>
    <string name="osm_visibility">Visibility</string>
    <string name="osm_visibility_summary">Set the visibility of your GPS Trace uploads</string>
    <string name="osm_description">Description</string>
    <string name="osm_description_summary">The description to use when uploading a trace</string>
    <string name="osm_tags">Tags</string>
    <string name="osm_tags_summary">The tags to apply when uploading a trace</string>
    <string name="pref_logging_summary">File types, creation and naming</string>
    <string name="dropbox_setup_title">Dropbox</string>
    <string name="owncloud_setup_title">ownCloud</string>
    <string name="owncloud_server_summary">ownCloud Base URL</string>
    <string name="owncloud_directory_summary">Folder to use on ownCloud server. Ensure that it exists or upload will fail.</string>
    <string name="owncloud_test_summary">Upload a test file to the ownCloud server</string>
    <string name="autoemail_from">From address</string>
    <string name="autoemail_from_summary">Some email providers require a from address. Use this only if you need it.
    </string>
    <string name="autoemail_sendto_csv">Comma separated email addresses</string>
    <string name="autosend_enabled">Allow auto sending</string>
    <string name="autosend_enabled_summary">Allows sending the files to various targets, at a defined frequency, or if the name changes due to custom naming</string>
    <string name="autosend_frequency_summary">How frequently log files should be sent, in minutes. Set to 0 to disable this.</string>
    <string name="autosend_frequency">How often?</string>
    <string name="autosend_sendzip_title">Send zip file</string>
    <string name="autosend_sendzip_summary">Send zip file where applicable. Disable to send individual files, or if the zip option is not
        working for you
    </string>
    <string name="autosend_targets_category">Auto Send Targets</string>
    <string name="pref_autosend_title">Auto send, email and upload</string>
    <string name="pref_autosend_summary">Email, share and upload options</string>
    <string name="log_opengts_title">Log to OpenGTS Server</string>
    <string name="log_opengts_summary">Send GPRMC data to an online OpenGTS server.</string>
    <string name="opengts_setup_title">OpenGTS</string>
    <string name="autoopengts_server_category">OpenGTS Settings</string>
    <string name="autoopengts_server">Server</string>
    <string name="autoopengts_server_summary">Hostname or IP</string>
    <string name="opengts_server_communication_method">Communication Method</string>
    <string name="opengts_server_communication_method_summary">HTTP-based or Raw Socket Based communication</string>
    <string name="autoopengts_server_path">Server Path</string>
    <string name="autoopengts_server_path_summary">Optional and only for HTTP-based communication. For example \'/gprmc/Data\'</string>
    <string name="autoopengts_device_id">Device ID</string>
    <string name="autoftp_username">Username</string>
    <string name="autoftp_password">Password</string>
    <string name="autoftp_port">Port</string>
    <string name="autoftp_setup_title">FTP</string>
    <string name="log_customurl_title">Log to custom URL</string>
    <string name="log_customurl_summary">Send logging info to your own server over HTTP</string>
    <string name="gpslogger_folder_title">Save to folder</string>
    <string name="gpslogger_folder_summary">Where to save the log files to, defaults to /sdcard/GPSLogger</string>
    <string name="autoftp_directory">Folder</string>
    <string name="new_file_custom_message">You can use %SER for device serial, %YEAR, %MONTH, %MONTHNAME, %DAY, %DAYNAME, %HOUR, %MIN, %PROFILE, %VER for version</string>
    <string name="new_file_prefix_serial_title">Prefix unique string to the file name</string>
    <string name="new_file_prefix_serial_summary">On Android 8 onwards, a unique Android ID is used. Pre-Android 8, the build serial number, found in your phone status, is used.</string>
    <string name="accuracy_filter_title">Accuracy Filter</string>
    <string name="accuracy_filter_summary">The minimum precision required for a point to be saved. Points that aren\'t this accurate will be discarded.</string>
    <string name="distance_filter_title">Distance filter</string>
    <string name="distance_filter_summary">The minimum distance required between current and previous for a point to be saved, otherwise the point will be discarded.</string>
    <string name="pref_filedetails_title">File and Folder Details</string>
    <string name="absolute_timeout_title">Absolute time to GPS fix</string>
    <string name="absolute_timeout_summary">Number of seconds after which the app gives up on trying to acquire a fix, regardless of other settings. This is especially useful for when you are inside buildings to prevent the GPS from draining battery.  Set to 0 for no timeout.</string>
    <string name="log_nmea_title">Log to NMEA</string>
    <string name="log_nmea_summary">Creates a raw NMEA file while trying to get a fix. This file grows very quickly. Only works while GPS is being used.</string>
    <string name="autoopengts_accountname">Account name</string>
    <string name="listeners_gps_title">Log GPS/GNSS locations</string>
    <string name="listeners_gps_summary">Logs locations provided by the satellite based location receiver on your device</string>
    <string name="listeners_cell_title">Log network locations</string>
    <string name="listeners_cell_summary">Logs locations provided by the network based location receiver on your device</string>
    <string name="listeners_passive_title">Log passive locations</string>
    <string name="listeners_passive_summary">Logs locations obtained from other apps, but note that most filters are ignored. This setting is also useful for external GPS receivers.</string>
    <string name="listeners_summary">Which location providers to use when they are available; GPS for satellites, Network for cell tower/wifi, Fused uses both, Passive is a special provider that listens for locations requested from other apps.</string>
    <string name="listeners_title">Location providers</string>
    <string name="autosend_frequency_hint">Number of minutes</string>
    <string name="new_file_custom_each_time_title">Ask for a file name on every start</string>
    <string name="new_file_custom_each_time_summary">Prompt for a custom file name each time the logging is started</string>
    <string name="altitude_subtractgeoidheight_summary">Uses Mean Sea Level (MSL) instead of WGS84 height by subtracting geoidheight from GPS altitude. Only applies to GPS satellite points, not network or NMEA.</string>
    <string name="altitude_subtractgeoidheight_title">Use MSL instead of WGS84</string>
    <string name="altitude_subtractoffset_title">Subtract altitude offset</string>
    <string name="altitude_subtractoffset_summary">A value in meters to subtract from GPS altitudes. Use a negative number to add a value to the altitude. Only applies to GPS satellite points, not network or NMEA.</string>
    <string name="autosend_wifionly_title">Send on Wi-Fi only</string>
    <string name="ssl_certificate_validate">Validate SSL Certificate</string>
    <string name="sftp_setup_title">SFTP</string>
    <string name="log_dawarich_title">Log to a Dawarich instance</string>
    <string name="log_dawarich_summary_detailed">Sends the recorded position to a defined Dawarich instance</string>
    <string name="log_dawarich_discard_offline_locations">Discard locations when offline</string>
    <string name="log_dawarich_discard_offline_locations_summary">If this option is enabled all locations will be
        discarded while offline instead of being queued for upload
    </string>
    <string name="log_dawarich_url">Dawarich base URL</string>
    <string name="log_dawarich_device_id">Device ID</string>
    <string name="log_dawarich_device_id_summary">The device id to declare in the position data to to differentiate
        between device in the future
    </string>
    <string name="log_dawarich_apikey">Dawarich API-key</string>
    <string name="dawarich_bulk_min_title">Bulk upload minimum locations</string>
    <string name="dawarich_bulk_min_summary">Minimum amount of locations to bundle for bulk upload (waits until amount
        is reached before sending)
    </string>
    <string name="dawarich_bulk_max_title">Bulk upload maximum locations</string>
    <string name="dawarich_bulk_max_summary">Maximum amount of locations to send in one bulk upload request</string>
</resources>