<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/pref_performance_title">


    <SwitchPreferenceCompat
        android:key="log_satellite_locations"
        android:title="@string/listeners_gps_title"
        android:summary="@string/listeners_gps_summary"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="log_network_locations"
        android:title="@string/listeners_cell_title"
        android:summary="@string/listeners_cell_summary"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="log_passive_locations"
        android:title="@string/listeners_passive_title"
        android:summary="@string/listeners_passive_summary" />



    <Preference
        android:key="time_before_logging"
        android:title="@string/time_before_logging_title"
        android:summary="@string/time_before_logging_summary"
        android:dialogTitle="@string/time_before_logging_dialog_title"
        android:numeric="integer"
        android:maxLength="4"
        android:hint="@string/time_before_logging_hint"
        android:defaultValue="60"/>

    <SwitchPreferenceCompat
        android:key="keep_fix"
        android:summary="@string/keep_fix_summary"
        android:title="@string/keep_fix_title"/>


    <Preference
        android:key="distance_before_logging"
        android:title="@string/distance_filter_title"
        android:summary="@string/distance_filter_summary"
        android:dialogTitle="@string/settings_distance_in_meters"
        android:numeric="integer"
        android:maxLength="4"
        android:defaultValue="0"
        android:hint="@string/settings_enter_meters"/>


    <Preference
        android:key="accuracy_before_logging"
        android:title="@string/accuracy_filter_title"
        android:summary="@string/accuracy_filter_summary"
        android:dialogTitle="@string/settings_accuracy_in_meters"
        android:numeric="integer"
        android:maxLength="4"
        android:defaultValue="40"
        android:hint="@string/settings_enter_meters"/>

    <Preference
        android:key="retry_time"
        android:title="@string/retry_time_title"
        android:summary="@string/retry_time_summary"
        android:dialogTitle="@string/time_before_logging_dialog_title"
        android:numeric="integer"
        android:maxLength="4"
        android:defaultValue="60"
        android:hint="@string/time_before_logging_hint"/>

    <Preference
        android:key="absolute_timeout"
        android:title="@string/absolute_timeout_title"
        android:summary="@string/absolute_timeout_summary"
        android:dialogTitle="@string/time_before_logging_dialog_title"
        android:numeric="integer"
        android:maxLength="4"
        android:defaultValue="120"
        android:hint="@string/time_before_logging_hint"/>

    <PreferenceCategory android:title="Altitude">
        <SwitchPreferenceCompat
            android:key="altitude_subtractgeoidheight"
            android:summary="@string/altitude_subtractgeoidheight_summary"
            android:title="@string/altitude_subtractgeoidheight_title"
            android:defaultValue="false"/>
        <Preference
            android:key="altitude_subtractoffset"
            android:title="@string/altitude_subtractoffset_title"
            android:summary="@string/altitude_subtractoffset_summary"
            android:dialogTitle="@string/settings_enter_meters"
            android:inputType="numberSigned"
            android:defaultValue="0"/>
    </PreferenceCategory>


</PreferenceScreen>