<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:key="osm_enabled"
        android:title="@string/autosend_enabled" />

    <Preference
        android:key="osm_resetauth"
        android:summary="@string/osm_resetauth_summary"
        android:title="@string/osm_resetauth" />

    <Preference
        android:defaultValue="private"
        android:entries="@array/osm_visibility_choices"
        android:entryValues="@array/osm_visibility_choices"
        android:key="osm_visibility"
        android:summary="@string/osm_visibility_summary"
        android:title="@string/osm_visibility" />

    <Preference
        android:dialogTitle="@string/osm_description"
        android:key="osm_description"
        android:summary="@string/osm_description_summary"
        android:title="@string/osm_description" />

    <Preference
        android:dialogTitle="@string/osm_tags"
        android:key="osm_tags"
        android:summary="@string/osm_tags_summary"
        android:title="@string/osm_tags" />

</PreferenceScreen>
