<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:key="autoopengts_enabled"
        android:title="@string/autosend_enabled" />

    <PreferenceCategory android:title="@string/autoopengts_server_category">

        <Preference
            android:dialogTitle="@string/autoopengts_server"
            android:hint="@string/autoopengts_server_summary"
            android:inputType="textUri"
            android:key="opengts_server"
            android:title="@string/autoopengts_server" />

        <Preference
            android:defaultValue="443"
            android:dialogTitle="@string/autoftp_port"
            android:inputType="number"
            android:key="opengts_server_port"
            android:title="@string/autoftp_port" />

        <ListPreference
            android:defaultValue="HTTPS"
            android:entries="@array/opengts_server_communication_methods_values"
            android:entryValues="@array/opengts_server_communication_methods_values"
            android:key="opengts_server_communication_method"
            android:summary="@string/opengts_server_communication_method_summary"
            android:title="@string/opengts_server_communication_method" />

        <Preference
            android:dialogTitle="@string/autoopengts_server_path"
            android:inputType="textUri"
            android:key="autoopengts_server_path"
            android:summary="@string/autoopengts_server_path_summary"
            android:title="@string/autoopengts_server_path" />

        <Preference
            android:key="opengts_accountname"
            android:title="@string/autoopengts_accountname" />

        <Preference
            android:dialogTitle="@string/autoopengts_device_id"
            android:key="opengts_device_id"
            android:title="@string/autoopengts_device_id" />

        <Preference
            android:key="opengts_validatecustomsslcert"
            android:title="@string/ssl_certificate_validate" />

    </PreferenceCategory>

</PreferenceScreen>
