<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="owncloud_preferences">

    <SwitchPreferenceCompat
        android:key="owncloud_enabled"
        android:title="@string/autosend_enabled" />

    <EditTextPreference
            android:key="owncloud_server"
            android:title="@string/owncloud_server_summary"
            android:defaultValue="http://127.0.0.1"
            android:dialogTitle="@string/owncloud_server_summary"
            android:hint="@string/owncloud_server_summary"/>
                
    <EditTextPreference
            android:key="owncloud_username"
            android:title="@string/autoftp_username"
            android:dialogTitle="@string/autoftp_username"/>

    <Preference
            android:key="owncloud_password"
            android:title="@string/autoftp_password"
            android:dialogTitle="@string/autoftp_password"
            android:inputType="textPassword"
        android:password="true"/>

    <Preference
            android:key="owncloud_directory"
            android:title="@string/autoftp_directory"
            android:defaultValue="gpslogger"
            android:dialogTitle="@string/autoftp_directory"
            android:summary="@string/owncloud_directory_summary"
            />
    <Preference android:key="owncloud_validatecustomsslcert"
                android:title="@string/ssl_certificate_validate" />

    <Preference android:title="@string/gdocs_test_title"
                android:summary="@string/owncloud_test_summary" android:key="owncloud_test"/>

</PreferenceScreen>